syntax = "proto3";
package elys.masterchef;

option go_package = "github.com/elys-network/elys/x/masterchef/types";

import "gogoproto/gogo.proto";

// Pool Info
message PoolInfo {
    // reward amount
	uint64 pool_id = 1;
    // reward wallet address
    string reward_wallet = 2;
    // multiplier for lp rewards
    string multiplier = 3 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
      ];
    // Block number since the creation of PoolInfo
    string num_blocks = 4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable) = false
    ]; 
    // Total dex rewards given
    string dex_reward_amount_given = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
    // Total eden rewards given
    string eden_reward_amount_given = 6 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable) = false
    ]; 
    // Eden APR, updated at every distribution
    string eden_apr = 7 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
    // Dex APR, updated at every distribution
    string dex_apr = 8 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
    // External Incentive APR, updated at every distribution
    string external_incentive_apr = 9 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
    // external reward denoms on the pool
    repeated string external_reward_denoms = 10;
}

message PoolRewardInfo {
	uint64 pool_id = 1;
    string reward_denom = 2;
    string pool_acc_reward_per_share = 3 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
      ];
    uint64 last_updated_block = 4;
}

message UserRewardInfo {
    string user = 1;
	uint64 pool_id = 2;
    string reward_denom = 3;
    string reward_debt = 4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
      ];
    string reward_pending = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
      ];
}